src/widget/css/general.css
/* Always set the map height explicitly to define the size of the div
 * element that contains the map. */
body {
    padding-bottom: 0px !important;
}

 #mapView #listView{
    height: 100%;
}

#mapView::-webkit-scrollbar,
#listView::-webkit-scrollbar,
#navView .categories-scroll-list::-webkit-scrollbar,
#detailView::-webkit-scrollbar {
    display: none;
}

#listView {
    position: fixed;
    top: 0;
    right: 0;
    bottom: 0;
    left: 0;
    overflow: hidden;
    background-color: #121212;
}

#listView .list-scrolling-container {
    position: fixed;
    top: 0;
    right: 0;
    bottom: 0;
    left: 0;
    overflow-y: scroll;
    overflow-x: hidden;
    -webkit-overflow-scrolling: touch;
}

#detailView {
    position: fixed;
    top: 0;
    right: 0;
    bottom: 0;
    left: 0;
    overflow-x: hidden;
    overflow-y: scroll;
    -webkit-overflow-scrolling: touch;
}

#carouselView img {
    width: 100%;
}

.animated {
  animation-duration: 400ms;
  animation-fill-mode: both;
}

@keyframes slideInDown {
  from {
    transform: translate3d(0, -100%, 0);
  }

  to {
    transform: translate3d(0, 0, 0);
  }
}

.slideInDown {
  animation-name: slideInDown;
}

/* Optional: Makes the sample page fill the window. */
html, body {
    height: 100%;
    margin: 0;
    padding: 0;
}

#view {
    position: relative;
    height: 100%;
    margin: 0;
    padding: 0;
}

/* Hide Google Stuff */
a[href^="http://maps.google.com/maps"]{display:none !important}
a[href^="https://maps.google.com/maps"]{display:none !important}

.gmnoprint a, .gmnoprint span, .gm-style-cc {
    display:none;
}

.sidenav {
    position: fixed;
    height: 82vh;
    left: 5px;
    right: 5px;
    bottom: 0;
    z-index: 2;
    background-color: rgba(255,255,255,0.95);
    transition: 0.5s;
    padding-top: 0;
    text-align:left;
    border-radius: 12px;
    border-bottom-left-radius: 0;
    border-bottom-right-radius: 0;
    transform: translateY(105%);
    -webkit-transform: translateY(105%);
    box-shadow: 0 0 20px rgba(0,0,0,0.25);
}

.categories-scroll-list {
    position: absolute;
    left: 0;
    right: 0;
    top: 70px;
    bottom: 0;
    overflow-x: hidden;
    overflow-y: scroll;
    border-top: 1px solid rgba(0,0,0,0.06);
    -webkit-overflow-scrolling: touch;
}

.sidenav.showing {
    transform: translateY(0);
    -webkit-transform: translateY(0);
}

.sidenav a {
    padding: 0 8px 8px 32px;
    text-decoration: none;
    font-size: 17px;
    color: #818181;
    transition: 0.3s;
    vertical-align: middle;
}

.sidenav label {
    margin-bottom: 0 !important;
}

.sidenav .closebtn {
    position: absolute;
    top: 5px;
    right: 5px;
    padding-bottom: 10px;
    font-size: 36px;
}

.buttonContainer{
    background-color: #000000;
    opacity: 0.8;
    border-radius: 25px;
    box-shadow: 0 1px 1.5px 0 rgba(0, 0, 0, 0.5);
    cursor: pointer;
}

.mapCenter{
    position: fixed;
    left: 10px;
    bottom: 15px;
    text-align: center;
    z-index: 1;
}

.mapCenter .buttonContainer {
    width: 55px;
    height: 55px;
    border-radius: 100%;
    position: relative;
    box-sizing: border-box;
}

.mapCenter div {
    padding: 20px;
    margin-top: 10px;
}

.mapCenter img {
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    margin: auto;
    width: 22px;
    height: 22px;
}

.listViewFilter {
    width: 110px;
    position: fixed;
    right: 10px;
    bottom: 21px;
    text-align: center;
    scroll-behavior: smooth;
    z-index: 1;
    backface-visibility: hidden;
}

.listViewFilter .buttonContainer {
    border-radius: 100px;
}

.listViewFilter div {
    padding: 6px 12px;
    display: inline-block;

}

.listViewFilter img {
    height: 18px;
    height: 18px;
}

#view.transition{
    visibility: hidden;
    opacity: .2;
}
#view.fade{
    visibility: visible;
    opacity: 1;
    transition: opacity 1s linear;
}

#locationSummary {
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    z-index: 10;
    background-color: rgba(255,255,255,0.85);
    -webkit-backdrop-filter: blur(8px);
    backdrop-filter: blur(8px);
    box-shadow: 0 2px 3px 0 rgba(0, 0, 0, 0.3);
    cursor: pointer;
}

#locationSummary .name.title {
    font-size: 14px;
    font-weight: 600;
    line-height: 1;
    margin: 0;
    color: #000;
}

#locationSummary .name.address {
    font-size: 11px;
    line-height: 1.27;
    margin: 0;
    color: #000;
}

#locationSummary .view-more {
    font-size: 9px;
    font-weight: 300;
}

#locationSummary .distance-indicator {
    padding-left: 0;
    padding-right: 0;
    margin-top: 0;
}

#locationSummary #close {
    position: absolute;
    top: 5px;
    right: 10px;
    font-size: 30px;
}

.detail-info {
    width: 65%;
    padding-left: 3%;
}

.map-holder {
    position: relative;
    top: 0;
    right: 0;
    height: 238px;
    left: 0;
}

.map-holder #smallMap {
    position: absolute;
    top: 0;
    right: 0;
    bottom: 0;
    left: 0;
}

.description {
    padding: 15px !important;
    white-space: normal !important;
}

.map-holder .map-details {
    position: absolute;
    bottom: 0;
    left: 0;
    right: 0;
    padding: 12px 20px;
    background-color: rgba(255,255,255,0.85);
    -webkit-backdrop-filter: blur(8px);
    backdrop-filter: blur(8px);
    box-shadow: 0 2px 3px 0 rgba(0,0,0,0.3);
    z-index: 1;
    display: flex;
    justify-content: space-between;
}

.map-details .title {
    font-weight: 600;
    font-size: 14px;
    line-height: 1.3;
}

.map-details .address {
    font-weight: 300;
    font-size: 11px;
    line-height: 1.3;
    color: #121212 !important;
}

.gm-bundled-control {
    // top: 60px !important;
}

@media screen and (max-height: 450px) {
    .sidenav {padding-top: 15px;}
    .sidenav a {font-size: 18px;}
}

.aligner{
    display: flex;
    align-items: center;
}
.col-image {
    width: 90px;
    height: 90px;
}
.col-title {
    width: 52%;
}
.detail-image{
    border-radius: 100%;
    width: 80px;
    height: 80px;
    background-size: cover;
    background-position: center;
    background-color: #eee;
    margin-top: 8px;
    margin-left: 6px;
}
.close{
    float: right;
    padding-right: 5px;
}
.arrow{
    vertical-align: middle;
}
.distance{
    font-size: 13px;
    margin-left: 6px;
}

.title {
    color: #121212 !important;
    font-size: 1.1em;
    font-weight: 500;
}

.list-item {
    position: relative;
    cursor: pointer;
    display: block;
    height: 56.25vw;
}

.list-item .list-image {
    display: block;
    height: 100%;
}


.list-item .list-info-container {
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    color: #fff;
    background: -moz-linear-gradient(top, rgba(0,0,0,0.65) 0%, rgba(0,0,0,0.2) 100%); /* FF3.6-15 */
    background: -webkit-linear-gradient(top, rgba(0,0,0,0.65) 0%,rgba(0,0,0,0.2) 100%); /* Chrome10-25,Safari5.1-6 */
    background: linear-gradient(to bottom, rgba(0,0,0,0.65) 0%,rgba(0,0,0,0.2) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
}

.list-item .list-title {
    display: inline-block;
    padding: 15px 15px 10px;
    font-weight: 600;
    font-size: 17px;
    margin-right: 60px;
}

.list-item .list-description {
    font-size: 14px;
    line-height: 1.2;
    padding: 0 15px;
    font-weight: 200;
}

.list-view-btn {
    position: absolute;
    right: 15px;
    bottom: 15px;
    width: 20px;
    opacity: 0.8;
}

.list-item .list-distance {
    display: inline-block;
    padding: 15px;
    position: absolute;
    top: 0;
    right: 0;
}

#categories h1 {
    font-size: 26px;
    margin: 15px;
}

#categories .category {
    padding: 10px 15px;
    border-bottom: 1px solid rgba(0,0,0,0.1);
}

#categories .category:last-child {
    border-bottom: none;
}

#categories .category .switch {
    margin-top: 4px;
    float: right;
}

#categories a {
    padding-left: 0;
}

.buttonHolder {
    display: block;
    width: 95%;
    margin: 0 auto;
    height: 60px;
    box-sizing: border-box;
}

.buttonItem {
    width: 50%;
    display: inline-block;
    float: left;
    padding: 0 10px;
    box-sizing: border-box;
}

.buttonItem.long {
    width: 100%;
}

#directionsBtn {
    display: block;
    width: 100%;
    text-align: center;
    margin: 20px 0 0;
    border: none;
    color: #fff;
    font-size: 15px;
    border-radius: 100px;
    padding: 10px 0;
    float: left;
    cursor: pointer;
}
#bookmarkBtn {
    font-size: 7.5vw;
    margin: auto;
    left: 2%;
}
#distance-holder {
    min-width: 14%;
}
#contactBtn {
    display: block;
    width: 100%;
    text-align: center;
    margin: 20px 0 0;
    border: none;
    color: #fff;
    font-size: 15px;
    border-radius: 100px;
    padding: 10px 0;
    float: left;
    cursor: pointer;
}

.description {
  padding-top: 0;
}

.__categoryItemBox {
    display: flex;
    justify-content: space-between;
}

.__categoryItemBox a {
    display: block;
    width: 80%;
    word-wrap: break-word;
}

.__categoryItemBox label {
    display: block;
}

